syntax = "proto3";

import "google/protobuf/empty.proto";

package go.micro.service.users;

service QueryPoints {
	rpc GetPaginated(RequestPageOptions) returns (ResponsePage) {}
	rpc GetList(google.protobuf.Empty) returns (ResponseQueryPointsArray) {}
	rpc GetByID(RequestQueryPointID) returns (ResponseQueryPoint) {}
	rpc Create(RequestCreateQueryPoint) returns (ResponseQueryPoint) {}
	rpc Update(RequestUpdateQueryPoint) returns (ResponseQueryPoint) {}
	rpc Delete(RequestQueryPointID) returns (ResponseQueryPoint) {}
}

message Message {
	string say = 1;
}

message RequestQueryPointID {
	string id = 1;
}

message ResponseQueryPointsArray {
    repeated ResponseQueryPoint queryPoints = 1;
}

message RequestPageOptions {
	message Filter {
		string field = 1;
		string value = 2;
	}

	int64 pageNumber = 1;
	int64 registersNumber = 2;
	Filter orderBy = 3;
	repeated Filter filters = 4;
}

message ResponsePage {
	int64 length = 1;
	int64 pageNumber = 2;
	int64 numberOfPages = 3;
	repeated ResponseQueryPoint data = 4;
}


message ResponseQueryPoint {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string documentNumber = 4;
	string email = 5;
	string phoneNumber = 6;
	string GDEUser = 7;
	string position = 8;

	int64 createdAt = 9;
	int64 modifiedAt = 10;
	int64 deletedAt = 11;
}

message RequestCreateQueryPoint {
	string firstName = 1;
	string lastName = 2;
	string documentNumber = 3;
	string password = 4;
	string repassword = 5;
	string email = 6;
	string phoneNumber = 7;
	string GDEUser = 8;
	string position = 9;
}

message RequestUpdateQueryPoint {
	string id = 1;
	string firstName = 2;
	string lastName = 3;
	string documentNumber = 4;
	string password = 5;
	string email = 6;
	string phoneNumber = 7;
	string GDEUser = 8;
	string position = 9;
}
